# wnaabi

./: .drone.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  appveyor.yml
cmake/modules/: FindSphinx.cmake
doc/: PrettyFunction.rst  conf.py  index.rst
include/wnaabi/: filter.hpp  pretty_function.hpp  string_literal.hpp  string_view.hpp  type_info.hpp  utility.hpp
scripts/: FindSphinx.cmake
test/: TODO.md  pretty_function.cpp  trim_pretty_function.cpp  trim_pretty_function.py  type_info.cpp
